Bug 168068 - Annotations for compressed files get lost
Summary: Annotations for compressed files get lost
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.7
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-02 07:38 UTC by Roman I Khimov
Modified: 2008-08-05 11:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman I Khimov 2008-08-02 07:38:39 UTC
Version:           0.7 (using KDE 4.1.0)
Installed from:    Debian testing/unstable Packages
OS:                Linux

Speaking of annotations.

I've tried to annotate compressed PS file (.ps.gz) and it works. But after re-opening that file again, annotations get lost.

From what I see it comes from the use of temporary file names (uncompressed PS in /tmp, right?) in docdata XML file name and doc-to-xml mapping not searching in actual XML url's.

So, for uncompressed PS I have "100915.12756d5.ps.xml" with '<documentInfo url="/home/rik/12756d5.ps">'. While for .ps.gz several "100915.okularBw4353.tmp.xml", "100915.okularkm4353.tmp.xml" and alike, which all have '<documentInfo url="/home/rik/12756d5.ps.gz">', but every time I open the document another xml appears and gets used.

Same thing happens if you try to open/annotate .pdf.gz, probably other compressed files.
Comment 1 Pino Toscano 2008-08-05 11:15:53 UTC
SVN commit 842324 by pino:

Correctly get the filename from the original url, not from the local file name of the real file being open.

BUG: 168068


 M  +1 -1      document.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842324
Comment 2 Pino Toscano 2008-08-05 11:17:29 UTC
SVN commit 842325 by pino:

Backport: correctly get the filename from the original url, not from the local file name of the real file being open.
Will be in KDE 4.1.1.

CCBUG: 168068


 M  +1 -1      document.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842325