Correctly get the filename from the original url, not from the local file name of the real file being open.

BUG: 168068

svn path=/trunk/KDE/kdegraphics/okular/; revision=842324